# biobench

./: .coverage  .coverage.cse-cnc196909s.coeit.osu.edu.2274784.XAVaIynx  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  README.md  REGRESSIONS.md  benchmark.py  coverage.json  croissant.json  design.md  examples.md  justfile  logbook.md  pyproject.toml  pytest.json  report.py  schema.sql  tutorial.md
biobench/: __init__.py  aimv2.py  config.py  cvml.py  dinov2_model.py  helpers.py  interfaces.py  jobqueue.py  linear_probing.py  llms.py  mllms.py  models.py  openset.py  registry.py  reporting.py  sam2.py  schema.sql  simpleshot.py  test_aimv2.py  test_auto_batch_size.py  test_config.py  test_frozendict.py  test_helpers.py  test_jobqueue.py  test_openset.py  test_reporting.py  test_sam2.py  test_smoke.py  test_vjepa.py  third_party_models.py  tutorial.md  vjepa.py
biobench/ages/: __init__.py
biobench/beluga/: __init__.py  download.py
biobench/birds525/: __init__.py  download.py
biobench/fishnet/: __init__.py  baseline.py  download.py
biobench/fungiclef/: __init__.py  baseline.py  download.py  metrics.py  test_metrics.py
biobench/herbarium19/: __init__.py  download.py
biobench/imagenet/: __init__.py
biobench/imagenet1k/: __init__.py
biobench/inat21/: __init__.py
biobench/iwildcam/: __init__.py  download.py
biobench/jobkit/: __init__.py  executors.py  futures.py  hooks.py  test_futures.py  test_hooks.py
biobench/kabr/: __init__.py  download.py
biobench/leopard/: __init__.py  download.py
biobench/mammalnet/: __init__.py  download.py
biobench/newt/: __init__.py  download.py
biobench/plankton/: __init__.py  download.py
biobench/plantnet/: __init__.py
biobench/rarespecies/: __init__.py
biobench/tasks/: imagenet.py
configs/: all.toml  cvml.toml  cvmls.toml  imagenet1k.toml  mllms.toml  neurips.toml  testing.toml
docs/: benchmark.html  index.html  llms.txt  mkdocs.yml  report.html
docs/api/: 404.html  benchmark.html  index.html  llms.txt  objects.inv  report.html  sitemap.xml
docs/assets/: outline.md
docs/biobench/: ages.html  aimv2.html  config.html  cvml.html  helpers.html  index.html  interfaces.html  llms.html  mllms.html  models.html  openset.html  registry.html  reporting.html  simpleshot.html  test_aimv2.html  test_auto_batch_size.html  test_helpers.html  test_openset.html  test_reporting.html  test_smoke.html  third_party_models.html  vjepa.html
docs/data/: results.json
docs/html/: benchmark.html
docs/md/: benchmark.md
models/: vit-l-14-tol200m-laion2b-replay-ep30.pt.REMOVED.git-id  vit-l-14-tol50m-laion2b-replay-ep50.pt.REMOVED.git-id
notebooks/: experiments.py  figures.py  graphs.py  leaderboard.py  scratch.py  tutorial.py
reports/: results.csv  table.csv
scripts/: ascii_only.py  count_params.py  docs.py  make_croissant.py  make_tables.py  regressions.py  sync.py  test_ascii_only.py
tests/: test_aimv2.py  test_auto_batch_size.py  test_config.py  test_dinov3.py  test_helpers.py  test_openset.py  test_reporting.py  test_smoke.py  test_vjepa.py  test_webssl.py
todo/: 0001_wide_leaderboard.md  0002_biobench_colors.md  0004_project_links.md  0005_table_sorting.md
web/: elm.json  index.html  main.css
(+252 files in other folders)
