[project]
name = "biobench"
version = "0.1.0"
description = "Benchmark for biology-related computer vision tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "jaxtyping>=0.2.33",
    "beartype>=0.18.5",
    "tyro>=0.8.10",
    "torchmetrics>=1.4.1",
    "open-clip-torch>=2.26.1",
    "datasets>=2.21.0",
    "scikit-learn>=1.5.1",
    "requests>=2.32.3",
    "tqdm>=4.66.5",
    "polars>=1.6.0",
    "marimo>=0.8.7",
    "matplotlib>=3.9.2",
    "pdoc3>=0.11.1",
    "wilds>=2.0.0",
    "cloudpickle>=3.0.0",
    "timm>=1.0.9",
    "kaggle>=1.6.17",
    "torchvision>=0.19.1",
    "submitit>=1.5.2",
    "pycocotools>=2.0.8",
    "gdown>=5.2.0",
    "litellm>=1.60.8",
    "pybase64>=1.4.0",
]

[tool.ruff.lint]
ignore = ["F722", "E402"]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "pyinstrument>=5.0.1",
]
