[project]
name = "biobench"
version = "0.1.0"
description = "Benchmark for biology-related computer vision tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "jaxtyping>=0.2.33",
    "beartype>=0.20.0",
    "tyro>=0.8.10",
    "open-clip-torch>=2.26.1",
    "scikit-learn>=1.5.1",
    "polars>=1.6.0",
    "marimo>=0.8.7",
    "matplotlib>=3.9.2",
    "pdoc3>=0.11.5",
    "timm>=1.0.9",
    "torchvision>=0.19.1",
    "submitit>=1.5.2",
    "litellm>=1.60.8",
    "pybase64>=1.4.0",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F722", "E402", "E501"]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "pyinstrument>=5.0.1",
]
